# hs-temporal-cookbook

./: README.md  cabal.project  flake.nix
hello/: Activity.hs  ActivityWithBoilerplate.hs  ChildWorkflow.hs  Cron.hs  README.md  hello.cabal
nix/: otel-desktop-viewer.nix
temporal101/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  HelloServer.hs  README.md  RetryPolicy.hs  SayHello.hs  temporal101.cabal
temporal102/: Exercise1.hs  Exercise1Client.hs  Exercise1Worker.hs  README.md  TranslationService.hs  UsingRecordTypes.hs  UsingRecordTypesClient.hs  temporal102.cabal
temporal102/ex1/: Client.hs  Exercise1.hs  README.md  TranslationService.hs  Worker.hs  Workflow.hs  ex1.cabal
temporal102/ex2/: Client.hs  README.md  Spec.hs  Worker.hs  Workflow.hs  ex2.cabal
temporal102/ex2/solution/: TranslationService.hs  Workflow.hs  ex2.cabal
temporal102/ex2/solution/tests/: ActivitySpec.hs  Spec.hs  TestUtils.hs
temporal102/ex2/tests/: ActivitySpec.hs  MockWorkflowSpec.hs  Spec.hs  TestUtils.hs  WorkflowSpec.hs
temporal102/ex3/: Client.hs  README.md  Worker.hs  Workflow.hs  ex3.cabal
temporal102/ex3/solution/: Client.hs  Workflow.hs  ex3.cabal
temporal102/ex3/solution/tests/: ActivitySpec.hs
temporal102/ex3/tests/: ActivitySpec.hs  Spec.hs
temporal102/samples/age-estimation/: Client.hs  README.md  Shared.hs  Worker.hs  Workflow.hs  age-estimation.cabal
temporal102/samples/age-estimation/tests/: ActivitySpec.hs  MockWorkflowSpec.hs  Spec.hs  TestUtils.hs  WorkflowSpec.hs
