cabal-version: 3.0

name:           hello
version:        0.0.0
license:        MPL-2.0
build-type:     Simple

common all
  default-language: GHC2021
  default-extensions:
    BlockArguments,
    DeriveAnyClass,
    DerivingVia,
    OverloadedRecordDot,
    OverloadedStrings,
    TemplateHaskell,
    TypeFamilies,
    UndecidableInstances,
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base,
    aeson,
    monad-logger,
    require-callstack,
    text,
    temporal-sdk-core,
    temporal-sdk,
    transformers,
    unliftio,
    uuid,

common executables

executable activity_with_boilerplate
  import: all
  main-is: ActivityWithBoilerplate.hs

executable child_workflow
  import: all
  main-is: ChildWorkflow.hs

executable cron
  import: all
  main-is: Cron.hs
