cabal-version: 3.0

name:       ex1
version:    0.0.0
license:    MPL-2.0
build-type: Simple
author:     Mercury Technologies Inc.
maintainer: temporal@mercury.com
copyright:  2025 Mercury Technologies Inc.

common all
  default-language: GHC2021
  default-extensions:
    BlockArguments,
    DeriveAnyClass,
    DerivingVia,
    OverloadedRecordDot,
    OverloadedStrings,
    RecordWildCards,
    TemplateHaskell,
    TypeFamilies,
    UndecidableInstances,
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base,
    bytestring,
    aeson,
    containers,
    discover-instances,
    http-conduit,
    http-types,
    monad-logger,
    require-callstack,
    scotty,
    text,
    temporal-sdk-core,
    temporal-sdk,
    time,
    transformers,
    unliftio,
    uuid,
  hs-source-dirs: .

common executables

executable exercise1
  import: all
  main-is: Exercise1.hs
  ghc-options: -main-is Exercise1.main

executable exercise1-client
  import: all
  main-is: Exercise1Client.hs
  other-modules: Exercise1

executable translation-service
  import: all
  main-is: TranslationService.hs
